restructure project folder

--- a/notebooks/data_processing.ipynb
+++ b/notebooks/data_processing.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -28,17 +28,17 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 232 entries, 0 to 231\n",
+      "RangeIndex: 229 entries, 0 to 228\n",
       "Data columns (total 5 columns):\n",
       " #   Column        Non-Null Count  Dtype \n",
       "---  ------        --------------  ----- \n",
-      " 0   message_id    232 non-null    object\n",
-      " 1   sender_id     232 non-null    int64 \n",
+      " 0   message_id    229 non-null    object\n",
+      " 1   sender_id     229 non-null    int64 \n",
       " 2   message_text  229 non-null    object\n",
-      " 3   channel       232 non-null    object\n",
-      " 4   date          232 non-null    object\n",
+      " 3   channel       229 non-null    object\n",
+      " 4   date          229 non-null    object\n",
       "dtypes: int64(1), object(4)\n",
-      "memory usage: 9.2+ KB\n"
+      "memory usage: 9.1+ KB\n"
      ]
     }
    ],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
        "      <th>1</th>\n",
        "      <td>3a4d3ccf-4737-41c6-b523-22fa04578c41</td>\n",
        "      <td>-1001135034032</td>\n",
-       "      <td>🩸🩸🩸🩸🩸🩸🩸🏴󠁧󠁢󠁥󠁮󠁧󠁿🏴󠁧󠁢󠁥󠁮󠁧󠁿\\n\\nOriginal💸 24/25 authe...</td>\n",
+       "      <td>🩸🩸🩸🩸🩸🩸🩸🏴󠁧󠁢󠁥󠁮󠁧󠁿🏴󠁧󠁢󠁥󠁮󠁧󠁿\\r\\n\\r\\nOriginal💸 24/25 a...</td>\n",
        "      <td>emartzonsportswear</td>\n",
        "      <td>2024-09-26 09:06:43+00:00</td>\n",
        "    </tr>\n",
@@ -129,7 +129,7 @@
        "      <th>2</th>\n",
        "      <td>24b12c75-b32d-44b6-a135-2ff0a77a44a5</td>\n",
        "      <td>-1001135034032</td>\n",
-       "      <td>🇺🇸 #መቷል_available_now 🇺🇸\\n#ኦሪጅናል_የልጆች_ማሊያ_ከነቁም...</td>\n",
+       "      <td>🇺🇸 #መቷል_available_now 🇺🇸\\r\\n#ኦሪጅናል_የልጆች_ማሊያ_ከነ...</td>\n",
        "      <td>emartzonsportswear</td>\n",
        "      <td>2024-09-24 08:07:57+00:00</td>\n",
        "    </tr>\n",
@@ -137,7 +137,7 @@
        "      <th>3</th>\n",
        "      <td>91f7af83-7005-4269-870f-f8d1ac6a1a2f</td>\n",
        "      <td>-1001135034032</td>\n",
-       "      <td>🏴󠁧󠁢󠁥󠁮󠁧󠁿🔤🔤🔤🔤🔤🔤🔤🔤🏴󠁧󠁢󠁥󠁮󠁧󠁿\\n#ኦሪጅናል_ማሊያ ✅\\nOriginal...</td>\n",
+       "      <td>🏴󠁧󠁢󠁥󠁮󠁧󠁿🔤🔤🔤🔤🔤🔤🔤🔤🏴󠁧󠁢󠁥󠁮󠁧󠁿\\r\\n#ኦሪጅናል_ማሊያ ✅\\r\\nOrig...</td>\n",
        "      <td>emartzonsportswear</td>\n",
        "      <td>2024-09-23 06:32:01+00:00</td>\n",
        "    </tr>\n",
@@ -145,7 +145,7 @@
        "      <th>4</th>\n",
        "      <td>da7aa81f-cdb0-4d06-bac5-defe36f5403c</td>\n",
        "      <td>-1001135034032</td>\n",
-       "      <td>🩸🩸🩸🩸🩸🩸🅰️🩸🩸\\nሜክሲኮ ቅርንጫፍ እሁድ ክፍት ነው✅\\n📌ሜክሲኮ አይመን...</td>\n",
+       "      <td>🩸🩸🩸🩸🩸🩸🅰️🩸🩸\\r\\nሜክሲኮ ቅርንጫፍ እሁድ ክፍት ነው✅\\r\\n📌ሜክሲኮ ...</td>\n",
        "      <td>emartzonsportswear</td>\n",
        "      <td>2024-09-22 09:23:05+00:00</td>\n",
        "    </tr>\n",
@@ -153,7 +153,7 @@
        "      <th>5</th>\n",
        "      <td>a07edfe6-fa94-40d1-906e-543f011e940d</td>\n",
        "      <td>-1001135034032</td>\n",
-       "      <td>🏴󠁧󠁢󠁥󠁮󠁧󠁿🅰️🔠🔠🔠🔠🅰️🔠🏴󠁧󠁢󠁥󠁮󠁧󠁿\\n#ኦሪጅናል_ማሊያ ✅\\nOrigina...</td>\n",
+       "      <td>🏴󠁧󠁢󠁥󠁮󠁧󠁿🅰️🔠🔠🔠🔠🅰️🔠🏴󠁧󠁢󠁥󠁮󠁧󠁿\\r\\n#ኦሪጅናል_ማሊያ ✅\\r\\nOri...</td>\n",
        "      <td>emartzonsportswear</td>\n",
        "      <td>2024-09-22 06:50:54+00:00</td>\n",
        "    </tr>\n",
@@ -161,7 +161,7 @@
        "      <th>6</th>\n",
        "      <td>295170ec-5b1c-4465-a9eb-4c2a3de861c6</td>\n",
        "      <td>-1001135034032</td>\n",
-       "      <td>🏴󠁧󠁢󠁥󠁮󠁧󠁿🔤🔤🔤🔤🏴󠁧󠁢󠁥󠁮󠁧󠁿\\n#ኦሪጅናል_ማሊያ ✅\\nOriginal Pum...</td>\n",
+       "      <td>🏴󠁧󠁢󠁥󠁮󠁧󠁿🔤🔤🔤🔤🏴󠁧󠁢󠁥󠁮󠁧󠁿\\r\\n#ኦሪጅናል_ማሊያ ✅\\r\\nOriginal...</td>\n",
        "      <td>emartzonsportswear</td>\n",
        "      <td>2024-09-22 06:44:46+00:00</td>\n",
        "    </tr>\n",
@@ -169,7 +169,7 @@
        "      <th>7</th>\n",
        "      <td>b2ab8a28-6398-4b12-954d-995f23c8796f</td>\n",
        "      <td>-1001135034032</td>\n",
-       "      <td>🏴󠁧󠁢󠁥󠁮󠁧󠁿🫵🩸🩸🩸🩸🩸🏴󠁧󠁢󠁥󠁮󠁧󠁿\\n#ኦሪጅናል_ማሊያ ✅\\nOriginal A...</td>\n",
+       "      <td>🏴󠁧󠁢󠁥󠁮󠁧󠁿🫵🩸🩸🩸🩸🩸🏴󠁧󠁢󠁥󠁮󠁧󠁿\\r\\n#ኦሪጅናል_ማሊያ ✅\\r\\nOrigin...</td>\n",
        "      <td>emartzonsportswear</td>\n",
        "      <td>2024-09-21 06:41:50+00:00</td>\n",
        "    </tr>\n",
@@ -177,7 +177,7 @@
        "      <th>8</th>\n",
        "      <td>17956865-93ca-48d0-80d0-e76e005c5c1f</td>\n",
        "      <td>-1001135034032</td>\n",
-       "      <td>🅰🅰🅰🅰🅰🅰🅰 🐶\\n\\nUnited 🏴󠁧󠁢󠁥󠁮󠁧󠁿 24/25 authentic pl...</td>\n",
+       "      <td>🅰🅰🅰🅰🅰🅰🅰 🐶\\r\\n\\r\\nUnited 🏴󠁧󠁢󠁥󠁮󠁧󠁿 24/25 authenti...</td>\n",
        "      <td>emartzonsportswear</td>\n",
        "      <td>2024-09-20 09:50:42+00:00</td>\n",
        "    </tr>\n",
@@ -185,7 +185,7 @@
        "      <th>9</th>\n",
        "      <td>d8e2dc12-fff3-4a30-88c7-6026fbd9252a</td>\n",
        "      <td>-1001135034032</td>\n",
-       "      <td>🏴󠁧󠁢󠁥󠁮󠁧󠁿🅰️🔠🔠🔠🔠🅰️🔠🏴󠁧󠁢󠁥󠁮󠁧󠁿\\n#ኦሪጅናል_ማሊያ ✅\\nOrigina...</td>\n",
+       "      <td>🏴󠁧󠁢󠁥󠁮󠁧󠁿🅰️🔠🔠🔠🔠🅰️🔠🏴󠁧󠁢󠁥󠁮󠁧󠁿\\r\\n#ኦሪጅናል_ማሊያ ✅\\r\\nOri...</td>\n",
        "      <td>emartzonsportswear</td>\n",
        "      <td>2024-09-19 12:12:58+00:00</td>\n",
        "    </tr>\n",
@@ -208,15 +208,15 @@
        "\n",
        "                                        message_text             channel  \\\n",
        "0                                          መልካም በአል!  emartzonsportswear   \n",
-       "1  🩸🩸🩸🩸🩸🩸🩸🏴󠁧󠁢󠁥󠁮󠁧󠁿🏴󠁧󠁢󠁥󠁮󠁧󠁿\\n\\nOriginal💸 24/25 authe...  emartzonsportswear   \n",
-       "2  🇺🇸 #መቷል_available_now 🇺🇸\\n#ኦሪጅናል_የልጆች_ማሊያ_ከነቁም...  emartzonsportswear   \n",
-       "3  🏴󠁧󠁢󠁥󠁮󠁧󠁿🔤🔤🔤🔤🔤🔤🔤🔤🏴󠁧󠁢󠁥󠁮󠁧󠁿\\n#ኦሪጅናል_ማሊያ ✅\\nOriginal...  emartzonsportswear   \n",
-       "4  🩸🩸🩸🩸🩸🩸🅰️🩸🩸\\nሜክሲኮ ቅርንጫፍ እሁድ ክፍት ነው✅\\n📌ሜክሲኮ አይመን...  emartzonsportswear   \n",
-       "5  🏴󠁧󠁢󠁥󠁮󠁧󠁿🅰️🔠🔠🔠🔠🅰️🔠🏴󠁧󠁢󠁥󠁮󠁧󠁿\\n#ኦሪጅናል_ማሊያ ✅\\nOrigina...  emartzonsportswear   \n",
-       "6  🏴󠁧󠁢󠁥󠁮󠁧󠁿🔤🔤🔤🔤🏴󠁧󠁢󠁥󠁮󠁧󠁿\\n#ኦሪጅናል_ማሊያ ✅\\nOriginal Pum...  emartzonsportswear   \n",
-       "7  🏴󠁧󠁢󠁥󠁮󠁧󠁿🫵🩸🩸🩸🩸🩸🏴󠁧󠁢󠁥󠁮󠁧󠁿\\n#ኦሪጅናል_ማሊያ ✅\\nOriginal A...  emartzonsportswear   \n",
-       "8  🅰🅰🅰🅰🅰🅰🅰 🐶\\n\\nUnited 🏴󠁧󠁢󠁥󠁮󠁧󠁿 24/25 authentic pl...  emartzonsportswear   \n",
-       "9  🏴󠁧󠁢󠁥󠁮󠁧󠁿🅰️🔠🔠🔠🔠🅰️🔠🏴󠁧󠁢󠁥󠁮󠁧󠁿\\n#ኦሪጅናል_ማሊያ ✅\\nOrigina...  emartzonsportswear   \n",
+       "1  🩸🩸🩸🩸🩸🩸🩸🏴󠁧󠁢󠁥󠁮󠁧󠁿🏴󠁧󠁢󠁥󠁮󠁧󠁿\\r\\n\\r\\nOriginal💸 24/25 a...  emartzonsportswear   \n",
+       "2  🇺🇸 #መቷል_available_now 🇺🇸\\r\\n#ኦሪጅናል_የልጆች_ማሊያ_ከነ...  emartzonsportswear   \n",
+       "3  🏴󠁧󠁢󠁥󠁮󠁧󠁿🔤🔤🔤🔤🔤🔤🔤🔤🏴󠁧󠁢󠁥󠁮󠁧󠁿\\r\\n#ኦሪጅናል_ማሊያ ✅\\r\\nOrig...  emartzonsportswear   \n",
+       "4  🩸🩸🩸🩸🩸🩸🅰️🩸🩸\\r\\nሜክሲኮ ቅርንጫፍ እሁድ ክፍት ነው✅\\r\\n📌ሜክሲኮ ...  emartzonsportswear   \n",
+       "5  🏴󠁧󠁢󠁥󠁮󠁧󠁿🅰️🔠🔠🔠🔠🅰️🔠🏴󠁧󠁢󠁥󠁮󠁧󠁿\\r\\n#ኦሪጅናል_ማሊያ ✅\\r\\nOri...  emartzonsportswear   \n",
+       "6  🏴󠁧󠁢󠁥󠁮󠁧󠁿🔤🔤🔤🔤🏴󠁧󠁢󠁥󠁮󠁧󠁿\\r\\n#ኦሪጅናል_ማሊያ ✅\\r\\nOriginal...  emartzonsportswear   \n",
+       "7  🏴󠁧󠁢󠁥󠁮󠁧󠁿🫵🩸🩸🩸🩸🩸🏴󠁧󠁢󠁥󠁮󠁧󠁿\\r\\n#ኦሪጅናል_ማሊያ ✅\\r\\nOrigin...  emartzonsportswear   \n",
+       "8  🅰🅰🅰🅰🅰🅰🅰 🐶\\r\\n\\r\\nUnited 🏴󠁧󠁢󠁥󠁮󠁧󠁿 24/25 authenti...  emartzonsportswear   \n",
+       "9  🏴󠁧󠁢󠁥󠁮󠁧󠁿🅰️🔠🔠🔠🔠🅰️🔠🏴󠁧󠁢󠁥󠁮󠁧󠁿\\r\\n#ኦሪጅናል_ማሊያ ✅\\r\\nOri...  emartzonsportswear   \n",
        "\n",
        "                        date  \n",
        "0  2024-09-26 12:31:37+00:00  \n",
@@ -231,7 +231,7 @@
        "9  2024-09-19 12:12:58+00:00  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,21 +242,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "0                                            መልካም በአል!\n",
-       "1    🩸🩸🩸🩸🩸🩸🩸🏴󠁧󠁢󠁥󠁮󠁧󠁿🏴󠁧󠁢󠁥󠁮󠁧󠁿\\n\\nOriginal💸 24/25 authe...\n",
-       "2    🇺🇸 #መቷል_available_now 🇺🇸\\n#ኦሪጅናል_የልጆች_ማሊያ_ከነቁም...\n",
-       "3    🏴󠁧󠁢󠁥󠁮󠁧󠁿🔤🔤🔤🔤🔤🔤🔤🔤🏴󠁧󠁢󠁥󠁮󠁧󠁿\\n#ኦሪጅናል_ማሊያ ✅\\nOriginal...\n",
-       "4    🩸🩸🩸🩸🩸🩸🅰️🩸🩸\\nሜክሲኮ ቅርንጫፍ እሁድ ክፍት ነው✅\\n📌ሜክሲኮ አይመን...\n",
+       "1    🩸🩸🩸🩸🩸🩸🩸🏴󠁧󠁢󠁥󠁮󠁧󠁿🏴󠁧󠁢󠁥󠁮󠁧󠁿\\r\\n\\r\\nOriginal💸 24/25 a...\n",
+       "2    🇺🇸 #መቷል_available_now 🇺🇸\\r\\n#ኦሪጅናል_የልጆች_ማሊያ_ከነ...\n",
+       "3    🏴󠁧󠁢󠁥󠁮󠁧󠁿🔤🔤🔤🔤🔤🔤🔤🔤🏴󠁧󠁢󠁥󠁮󠁧󠁿\\r\\n#ኦሪጅናል_ማሊያ ✅\\r\\nOrig...\n",
+       "4    🩸🩸🩸🩸🩸🩸🅰️🩸🩸\\r\\nሜክሲኮ ቅርንጫፍ እሁድ ክፍት ነው✅\\r\\n📌ሜክሲኮ ...\n",
        "Name: message_text, dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,17 +285,17 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 232 entries, 0 to 231\n",
+      "RangeIndex: 229 entries, 0 to 228\n",
       "Data columns (total 5 columns):\n",
       " #   Column        Non-Null Count  Dtype \n",
       "---  ------        --------------  ----- \n",
-      " 0   message_id    232 non-null    object\n",
-      " 1   sender_id     232 non-null    int64 \n",
+      " 0   message_id    229 non-null    object\n",
+      " 1   sender_id     229 non-null    int64 \n",
       " 2   message_text  229 non-null    object\n",
-      " 3   channel       232 non-null    object\n",
-      " 4   date          232 non-null    object\n",
+      " 3   channel       229 non-null    object\n",
+      " 4   date          229 non-null    object\n",
       "dtypes: int64(1), object(4)\n",
-      "memory usage: 9.2+ KB\n"
+      "memory usage: 9.1+ KB\n"
      ]
     }
    ],
@@ -349,7 +349,7 @@
        "      <th>1</th>\n",
        "      <td>3a4d3ccf-4737-41c6-b523-22fa04578c41</td>\n",
        "      <td>-1001135034032</td>\n",
-       "      <td>🩸🩸🩸🩸🩸🩸🩸🏴󠁧󠁢󠁥󠁮󠁧󠁿🏴󠁧󠁢󠁥󠁮󠁧󠁿\\n\\nOriginal💸 24/25 authe...</td>\n",
+       "      <td>🩸🩸🩸🩸🩸🩸🩸🏴󠁧󠁢󠁥󠁮󠁧󠁿🏴󠁧󠁢󠁥󠁮󠁧󠁿\\r\\n\\r\\nOriginal💸 24/25 a...</td>\n",
        "      <td>emartzonsportswear</td>\n",
        "      <td>2024-09-26 09:06:43+00:00</td>\n",
        "    </tr>\n",
@@ -357,7 +357,7 @@
        "      <th>2</th>\n",
        "      <td>24b12c75-b32d-44b6-a135-2ff0a77a44a5</td>\n",
        "      <td>-1001135034032</td>\n",
-       "      <td>🇺🇸 #መቷል_available_now 🇺🇸\\n#ኦሪጅናል_የልጆች_ማሊያ_ከነቁም...</td>\n",
+       "      <td>🇺🇸 #መቷል_available_now 🇺🇸\\r\\n#ኦሪጅናል_የልጆች_ማሊያ_ከነ...</td>\n",
        "      <td>emartzonsportswear</td>\n",
        "      <td>2024-09-24 08:07:57+00:00</td>\n",
        "    </tr>\n",
@@ -365,7 +365,7 @@
        "      <th>3</th>\n",
        "      <td>91f7af83-7005-4269-870f-f8d1ac6a1a2f</td>\n",
        "      <td>-1001135034032</td>\n",
-       "      <td>🏴󠁧󠁢󠁥󠁮󠁧󠁿🔤🔤🔤🔤🔤🔤🔤🔤🏴󠁧󠁢󠁥󠁮󠁧󠁿\\n#ኦሪጅናል_ማሊያ ✅\\nOriginal...</td>\n",
+       "      <td>🏴󠁧󠁢󠁥󠁮󠁧󠁿🔤🔤🔤🔤🔤🔤🔤🔤🏴󠁧󠁢󠁥󠁮󠁧󠁿\\r\\n#ኦሪጅናል_ማሊያ ✅\\r\\nOrig...</td>\n",
        "      <td>emartzonsportswear</td>\n",
        "      <td>2024-09-23 06:32:01+00:00</td>\n",
        "    </tr>\n",
@@ -373,7 +373,7 @@
        "      <th>4</th>\n",
        "      <td>da7aa81f-cdb0-4d06-bac5-defe36f5403c</td>\n",
        "      <td>-1001135034032</td>\n",
-       "      <td>🩸🩸🩸🩸🩸🩸🅰️🩸🩸\\nሜክሲኮ ቅርንጫፍ እሁድ ክፍት ነው✅\\n📌ሜክሲኮ አይመን...</td>\n",
+       "      <td>🩸🩸🩸🩸🩸🩸🅰️🩸🩸\\r\\nሜክሲኮ ቅርንጫፍ እሁድ ክፍት ነው✅\\r\\n📌ሜክሲኮ ...</td>\n",
        "      <td>emartzonsportswear</td>\n",
        "      <td>2024-09-22 09:23:05+00:00</td>\n",
        "    </tr>\n",
@@ -391,10 +391,10 @@
        "\n",
        "                                        message_text             channel  \\\n",
        "0                                          መልካም በአል!  emartzonsportswear   \n",
-       "1  🩸🩸🩸🩸🩸🩸🩸🏴󠁧󠁢󠁥󠁮󠁧󠁿🏴󠁧󠁢󠁥󠁮󠁧󠁿\\n\\nOriginal💸 24/25 authe...  emartzonsportswear   \n",
-       "2  🇺🇸 #መቷል_available_now 🇺🇸\\n#ኦሪጅናል_የልጆች_ማሊያ_ከነቁም...  emartzonsportswear   \n",
-       "3  🏴󠁧󠁢󠁥󠁮󠁧󠁿🔤🔤🔤🔤🔤🔤🔤🔤🏴󠁧󠁢󠁥󠁮󠁧󠁿\\n#ኦሪጅናል_ማሊያ ✅\\nOriginal...  emartzonsportswear   \n",
-       "4  🩸🩸🩸🩸🩸🩸🅰️🩸🩸\\nሜክሲኮ ቅርንጫፍ እሁድ ክፍት ነው✅\\n📌ሜክሲኮ አይመን...  emartzonsportswear   \n",
+       "1  🩸🩸🩸🩸🩸🩸🩸🏴󠁧󠁢󠁥󠁮󠁧󠁿🏴󠁧󠁢󠁥󠁮󠁧󠁿\\r\\n\\r\\nOriginal💸 24/25 a...  emartzonsportswear   \n",
+       "2  🇺🇸 #መቷል_available_now 🇺🇸\\r\\n#ኦሪጅናል_የልጆች_ማሊያ_ከነ...  emartzonsportswear   \n",
+       "3  🏴󠁧󠁢󠁥󠁮󠁧󠁿🔤🔤🔤🔤🔤🔤🔤🔤🏴󠁧󠁢󠁥󠁮󠁧󠁿\\r\\n#ኦሪጅናል_ማሊያ ✅\\r\\nOrig...  emartzonsportswear   \n",
+       "4  🩸🩸🩸🩸🩸🩸🅰️🩸🩸\\r\\nሜክሲኮ ቅርንጫፍ እሁድ ክፍት ነው✅\\r\\n📌ሜክሲኮ ...  emartzonsportswear   \n",
        "\n",
        "                        date  \n",
        "0  2024-09-26 12:31:37+00:00  \n",
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
        "Name: cleaned_message, Length: 229, dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
